@@ -25,7 +25,7 @@
 	</distributionManagement>
 	<properties>
 		<mxpio.version>4.0.0-beta.1</mxpio.version>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<springdoc.version>1.7.0</springdoc.version>
 		<knife4j.version>3.0.3</knife4j.version>
@@ -55,6 +55,7 @@
         <okhttp3.version>4.12.0</okhttp3.version>
         <dom4j.version>2.2.0</dom4j.version>
         <asm.version>9.7.1</asm.version>
+        <lombok.version>1.18.42</lombok.version>
 	</properties>
 	<modules>
 		<module>mxpio-boot-base-autoconfigure</module>
@@ -124,7 +125,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.42</version>
+			<version>${lombok.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -484,9 +485,19 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-proc:full</arg> <!-- 显式启用完整的注解处理 -->
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version> <!-- 与依赖版本一致 -->
+                        </path>
+                    </annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<!-- 打包跳过测试 -->
